hard-gists/1083908/run.log
=== Docker Run Log for 1083908 ===
Started at: Mi 29. Okt 11:50:10 CET 2025

[2025-10-29 11:50:10] START: Running container for 1083908
[2025-10-29 11:50:11] SUCCESS: Container 32a864d79c3e6aa9b80230a3ade036f2509ec3e2d5d40adb27da3990f2dd47dd started for 1083908
=== Container logs for 1083908 ===
  File "/snippet.py", line 49
    print "I love it"
    ^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1083908 ===
[2025-10-29 11:50:13] INFO: Container 32a864d79c3e6aa9b80230a3ade036f2509ec3e2d5d40adb27da3990f2dd47dd has stopped
